--- a/task-1.html
+++ b/task-1.html
@@ -16,38 +16,40 @@
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <ul id="categories">
-      <li class="item">
-        <h2 class="title">Animals</h2>
+    <div class="container">
+      <ul id="categories">
+        <li class="item item-animals">
+          <h2 class="title">Animals</h2>
 
-        <ul class="list">
-          <li class="taste-item">Cat</li>
-          <li class="taste-item">Hamster</li>
-          <li class="taste-item">Horse</li>
-          <li class="taste-item">Parrot</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2 class="title">Products</h2>
+          <ul class="list">
+            <li class="taste-item">Cat</li>
+            <li class="taste-item">Hamster</li>
+            <li class="taste-item">Horse</li>
+            <li class="taste-item">Parrot</li>
+          </ul>
+        </li>
+        <li class="item">
+          <h2 class="title">Products</h2>
 
-        <ul class="list">
-          <li class="taste-item">Bread</li>
-          <li class="taste-item">Prasley</li>
-          <li class="taste-item">Cheese</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2 class="title">Technologies</h2>
+          <ul class="list">
+            <li class="taste-item">Bread</li>
+            <li class="taste-item">Prasley</li>
+            <li class="taste-item">Cheese</li>
+          </ul>
+        </li>
+        <li class="item">
+          <h2 class="title">Technologies</h2>
 
-        <ul class="list">
-          <li class="taste-item">HTML</li>
-          <li class="taste-item">CSS</li>
-          <li class="taste-item">JavaScript</li>
-          <li class="taste-item">React</li>
-          <li class="taste-item">Node.js</li>
-        </ul>
-      </li>
-    </ul>
+          <ul class="list">
+            <li class="taste-item">HTML</li>
+            <li class="taste-item">CSS</li>
+            <li class="taste-item">JavaScript</li>
+            <li class="taste-item">React</li>
+            <li class="taste-item">Node.js</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
 
     <script src="./js/task-1.js" type="module"></script>
   </body>
