--- a/task-4.html
+++ b/task-4.html
@@ -6,21 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <form class="login-form">
-      <label class="label">
-        Email
-        <input class="input" type="email" name="email" />
-      </label>
-      <label class="label">
-        Password
-        <input class="input" type="password" name="password" />
-      </label>
-      <button type="submit">Login</button>
-    </form>
+    <div class="container-form">
+      <form class="login-form">
+        <label class="label">
+          Email
+          <input class="input" type="email" name="email" />
+        </label>
+        <label class="label">
+          Password
+          <input class="input" type="password" name="password" />
+        </label>
+        <button class="button-login" type="submit">Login</button>
+      </form>
+    </div>
 
     <script src="./js/task-4.js" type="module"></script>
   </body>
