--- a/task-5.html
+++ b/task-5.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 5</title>
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
     <div class="widget">
-      <p>Background color: <span class="color">-</span></p>
+      <p class="background-color">
+        Background color: <span class="color">-</span>
+      </p>
       <button type="button" class="change-color">Change color</button>
     </div>
 
