--- a/task-6.html
+++ b/task-6.html
@@ -6,18 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 6</title>
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <div id="controls">
-      <input type="number" min="1" max="100" step="1" />
-      <button type="button" data-create>Create</button>
-      <button type="button" data-destroy>Destroy</button>
+    <div class="container-script">
+      <div id="controls">
+        <input class="input-number" type="number" min="1" max="100" step="1" />
+        <button class="button-create" type="button" data-create>Create</button>
+        <button class="button-destroy" type="button" data-destroy>
+          Destroy
+        </button>
+      </div>
+
+      <div id="boxes"></div>
     </div>
-
-    <div id="boxes"></div>
-
     <script src="./js/task-6.js" type="module"></script>
   </body>
 </html>
